# metadocs

./: main.py  pyproject.toml  requirements.txt
.deta/: prog_info  state
metadocs/: pyproject.toml
metadocs/models/user/: .env  main.py  requirements.txt
metadocs/models/user/.deta/: prog_info  state
metadocs/models/user/templates/: index.html  login.html  users.html
metadocsProject/backend/metadocs/: pyproject.toml
metadocsProject/backend/metadocs/tests/: test_metadocs.py
metadocsProject/frontend/: package-lock.json
templates/: index.html
