[tool.poetry]
name = "metadocs"
version = "0.1.0"
description = ""
authors = ["arantesdv <arantesdv@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
deta = "^0.7"
bcrypt = "^3.2.0"
python-dotenv = "^0.15.0"
python-multipart = "^0.0.5"
uvicorn = "^0.13.4"
Jinja2 = "^2.11.3"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
